Popupmenu: Fix z-index

--- a/extensions/base/widgets/ui/css/PopupMenu.css
+++ b/extensions/base/widgets/ui/css/PopupMenu.css
@@ -54,6 +54,7 @@
 	border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
 	display: none;
+	z-index: 1;
 }
 
 .popupmenuitem {
